trunk/Archive2/c2/3417fa7ae10738/output
main.cpp:3:47: error: allocation of incomplete type 'Foo'
template <class T> Foo* Create() { return new Foo; }
                                              ^~~
main.cpp:1:8: note: forward declaration of 'Foo'
struct Foo;
       ^
1 error generated.
